tests/compile_fail/bind_forward_prev_borrow_prev/main.cpp
#include "yorch/bind.hpp"

int main() {
    auto task = yorch::bind_forward_prev<int>(
        [](const int&) noexcept -> yorch::step_result {
            return yorch::step_result::success();
        },
        yorch::borrow_prev<int>());

    (void)task;
    return 0;
}
